Import of AKALINUX/Data-Range-Compare-1.030 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.030
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.030.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -29,3 +29,7 @@ Change log file for data-range-comp
  
 1.029
   Pod and meta data updates
+
+1.030
+  More Pod clean ups
+    Corrected documentation in Compare.pod
